fix light and dark mode toggle bug

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -190,7 +190,7 @@
   --tt-cursor-color: var(--tt-brand-color-500);
   --tt-selection-color: rgba(157, 138, 255, 0.2);
   --tt-card-bg-color: var(--white);
-  --tt-card-border-color: var(--tt-gray-light-a-100);
+  --tt-card-border-color: var(--tt-gray-light-a-200);
 }
 
 /* Global colors - Dark mode */
